--- a/frontend/templates/partial/header.html
+++ b/frontend/templates/partial/header.html
@@ -3,7 +3,7 @@
     <nav class="top-nav">
         <ul class="menu">
             <li><a href="{% url 'front_home' %}">{% trans 'Home' %}</a></li>
-            <li><a href="{% url 'games' %}">{% trans 'Games' %}</a></li>
+            <li><a href="{% url 'games_menu' %}">{% trans 'Games' %}</a></li>
             <li><a href="{% url 'champions_page' %}">{% trans 'Champions' %}</a></li>
             <li><a href="{% url 'how_to_play' %}">{% trans 'How To Play' %}</a></li>
             <li><a href="{% url 'game_history_page' %}">{% trans 'Game History' %}</a></li>
